--- a/Client_IPv6/Client_IPv6.vcxproj
+++ b/Client_IPv6/Client_IPv6.vcxproj
@@ -79,6 +79,9 @@
   <ItemGroup>
     <ClCompile Include="Client_IPv6.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Client_IPv6.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
