--- a/Client_IPv4/Client_IPv4.vcxproj
+++ b/Client_IPv4/Client_IPv4.vcxproj
@@ -79,6 +79,9 @@
   <ItemGroup>
     <ClCompile Include="Client_IPv4.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Client_IPv4.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
